--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,16 +1,31 @@
 spring:
+  profiles:
+    active: peer2
   application:
     name: eureka-server
-server:
-  port: 1111
 eureka:
   instance:
     perferIpAddress: false
-  server:
-    enable-self-preservation: false
-    eviction-interval-timer-in-ms: 4000
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    serviceUrl: 
-      defaultZone: http://localhost:${server.port}/eureka/
+---
+spring:  
+  profiles: peer1 
+server:
+  port: 1111
+eureka:  
+  instance:  
+    hostname: peer1  
+  client:  
+    serviceUrl:  
+      defaultZone: http://peer2:2222/eureka/
+---
+spring:  
+  profiles: peer2 
+server:
+  port: 2222
+eureka:  
+  instance:  
+    hostname: peer2  
+  client:  
+    serviceUrl:  
+      defaultZone: http://peer1:1111/eureka/
+                   
