--- a/provider-one/src/main/resources/application.yml
+++ b/provider-one/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: user-one-server
+    name: user-server
 server:
   port: 8080
 eureka:
   client:
     serviceUrl: 
-      defaultZone: http://localhost:1111/eureka/
+      defaultZone: http://peer1:1111/eureka/
