--- a/provider-one/src/main/resources/application.yml
+++ b/provider-one/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   application:
-    name: user-server
+    name: user
 server:
   port: 8080
 eureka:
   client:
     serviceUrl: 
       defaultZone: http://peer1:1111/eureka/
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 1000
+ribbon:
+  ReadTimeout: 5000
+  ConnectTimeout: 5000
