--- a/cloud-config/user-pro.yml
+++ b/cloud-config/user-pro.yml
@@ -1,1 +1,14 @@
 from: git-pro-2.0
+spring:
+  application:
+    name: user
+server:
+  port: 8081
+eureka:
+  client:
+    serviceUrl: 
+      defaultZone: http://peer1:1111/eureka/
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 1000
+ribbon:
+  ReadTimeout: 5000
+  ConnectTimeout: 5000
