提交git分布式配置

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -13,3 +13,10 @@ spring:
           password: wsc15171545112
 server:
   port: 6001
+eureka: 
+  client:
+    serviceUrl:
+      defaultZone: http://peer1:1111/eureka/
+  instance:
+    preferIpAddress: false
+    hostName: config-server
