--- a/cloud-config/eureka-test.yml
+++ b/cloud-config/eureka-test.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: peer2
   application:
-    name: eureka-server
+    name: eureka
 eureka:
   instance:
     perferIpAddress: false
