--- a/consumer-one/src/main/resources/bootstrap.yml
+++ b/consumer-one/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
+  application:
+    name: hello
   cloud:
     config:
-      profile: dev
+      profile: test
       label: dev
       uri: http://localhost:6001/
