测试自动更新配置

--- a/cloud-config/user-test.yml
+++ b/cloud-config/user-test.yml
@@ -2,6 +2,11 @@ from: git-test-2.0
 spring:
   application:
     name: user
+  rabiitmq:
+    host: wusc.com
+    port: 15672
+    username: wusc
+    password: 123456
 server:
   port: 8082
 eureka:
