--- a/cloud-config/user-dev.yml
+++ b/cloud-config/user-dev.yml
@@ -2,6 +2,11 @@ from: git-dev-4.0
 spring:
   application:
     name: user
+  rabiitmq:
+    host: wusc.com
+    port: 15672
+    username: wusc
+    password: 123456
 server:
   port: 8080
 eureka:
