测试自动更新配置

--- a/provider-one/src/main/resources/bootstrap.yml
+++ b/provider-one/src/main/resources/bootstrap.yml
@@ -3,6 +3,9 @@ spring:
     name: user
   cloud:
     config:
-      profile: test
+      profile: dev
       label: dev
       uri: http://localhost:6001/
+management:
+  security:
+    enabled: false
