--- a/cloud-config/hello-pro.yml
+++ b/cloud-config/hello-pro.yml
@@ -2,6 +2,11 @@ from: git-pro-2.0
 spring:
   application:
     name: hello
+  rabiitmq:
+    host: wusc.com
+    port: 15672
+    username: wusc
+    password: 123456
 server:
   port: 7002
 eureka:
