--- a/cloud-config/hello-test.yml
+++ b/cloud-config/hello-test.yml
@@ -2,6 +2,11 @@ from: git-test-2.0
 spring:
   application:
     name: hello
+  rabiitmq:
+    host: wusc.com
+    port: 15672
+    username: wusc
+    password: 123456
 server:
   port: 7003
 eureka:
